# mini_pytype

./: .gitignore  .pyre_configuration  README.md  dune-project
.github/workflows/: ci.yml
demo/: bad.py  demo.py  test_error.py
metrics/: .all_py_files.txt  benchmark_with_pyre.py  metrics_test.py
py/: py2json.py
src/: Cli.ml  ast.ml  checker.ml  constraint_gen.ml  dune  json_decode.ml  main.ml  report.ml  types.ml  unify.ml
tests/: dune  test_cli.ml
tests/data/: arity_mismatch.py  bad_binops.py  bad_dict.py  bad_dict_keys.py  bad_list.py  bad_nested.py  bad_return.py  dict_key_mismatch.py  good_binops.py  good_dict.py  good_dict_keys.py  good_list.py  good_nested.py  good_return.py  list_plus_int.py  lists_and_dicts.py  literals.py  methods.py  name_any.py  nested_calls.py  wrong_arg_type.py  wrong_return_type.py
